Custom--app/main/default/objects/Rehab__c/fields/Pool_Buried__c.field-meta.xml
<CustomField>
    <fullName>Pool_Buried__c</fullName>
    <inlineHelpText>Please indicate here if the pool on this property was buried and is no longer in place.  (This will be used to alert the acquisition team and the leasing team that the details regarding this property have changed.)</inlineHelpText>
    <label>Pool Buried?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>