Custom--app/main/default/objects/Rehab__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <formula>Portfolio__r.Owner:User.Full_Name__c</formula>
    <label>Portfolio Manager</label>
    <type>Text</type>
</CustomField>