Custom--app/main/default/objects/Rehab__c/fields/Pre_Move_Out_Inspection_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Pre_Move_Out_Inspection_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field replaces the old Text field called, "Pre Move Out Inspection Completed By Old".</description>
    <inlineHelpText>This field replaces the old Text field called, "Pre Move Out Inspection Completed By Old".</inlineHelpText>
    <label>Pre Move Out Inspection Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs5</relationshipName>
    <type>Lookup</type>
</CustomField>