Custom--app/main/default/objects/Rehab__c/fields/Pre_Move_Out_Inspection_Completed_By_Old__c.field-meta.xml
<CustomField>
    <fullName>Pre_Move_Out_Inspection_Completed_By_Old__c</fullName>
    <description>This text field was retired effective 8/20/14 in favor of the new Lookup field called, "Pre Move Out Assigned To".</description>
    <inlineHelpText>This text field was retired effective 8/20/14 in favor of the new Lookup field called, "Pre Move Out Assigned To".</inlineHelpText>
    <label>Pre Move Out Inspection Completed By Old</label>
    <type>TextArea</type>
</CustomField>