Custom--app/main/default/objects/Rehab__c/fields/Pre_Move_Out_Inspection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Move_Out_Inspection_Notes__c</fullName>
    <description>This field can be lengthened if need be, per Adam Love.</description>
    <label>Pre Move Out Inspection Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>