Custom--app/main/default/objects/Rehab__c/fields/Pre_Move_Out_Inspection_Requested__c.field-meta.xml
<CustomField>
    <fullName>Pre_Move_Out_Inspection_Requested__c</fullName>
    <formula>Renewal__r.Pre_Move_Out_Inspection_Requested__c</formula>
    <inlineHelpText>This field is editable on Renewal.</inlineHelpText>
    <label>Pre Move Out Inspection Requested</label>
    <type>Checkbox</type>
</CustomField>