Custom--app/main/default/objects/Rehab__c/fields/Projected_Spend_Base_Budget__c.field-meta.xml
<CustomField>
    <fullName>Projected_Spend_Base_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is populated from the form that is generated when you click the rehab projected spend button on the Change Order related list</inlineHelpText>
    <label>Projected Spend Base Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>