Custom--app/main/default/objects/Rehab__c/fields/Projected_Spend_Changes_To_Budget__c.field-meta.xml
<CustomField>
    <fullName>Projected_Spend_Changes_To_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total amount of change orders</inlineHelpText>
    <label>Change Order Running Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>