Custom--app/main/default/objects/Rehab__c/fields/Projected_Spend_Running_Total__c.field-meta.xml
<CustomField>
    <fullName>Projected_Spend_Running_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This number is the total of the base budget plus all change orders</inlineHelpText>
    <label>Committed Spend Running Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>