Custom--app/main/default/objects/Rehab__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Portfolio__r.Property_Street__c</formula>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>