Custom--app/main/default/objects/Rehab__c/fields/Property_Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Property_Cross_Streets__c</fullName>
    <formula>Portfolio__r.Property_Cross_Streets__c</formula>
    <label>Property Cross Streets</label>
    <type>Text</type>
</CustomField>