Custom--app/main/default/objects/Rehab__c/fields/Property_Notes_From_Residence__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes_From_Residence__c</fullName>
    <formula>Portfolio__r.Residence__r.Property_Notes_Specific_to_Property__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Notes (From Residence)</label>
    <type>Text</type>
</CustomField>