Custom--app/main/default/objects/Rehab__c/fields/Property_Notes_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes_Rehab__c</fullName>
    <inlineHelpText>This field can be populated in sf.com or via the HD app to note gate code, amenities or other information that will be useful for the leasing team.</inlineHelpText>
    <label>Property Notes @Rehab</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>