Custom--app/main/default/objects/Rehab__c/fields/Property_Notes_UW__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes_UW__c</fullName>
    <inlineHelpText>This field will be auto-populated from the Portfolio record based on notes from the acquisition team.</inlineHelpText>
    <label>Property Notes @ UW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>