Custom--app/main/default/objects/Rehab__c/fields/PTL_Email_to_GC__c.field-meta.xml
<CustomField>
    <fullName>PTL_Email_to_GC__c</fullName>
    <label>PTL Email to GC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>