Custom--app/main/default/objects/Rehab__c/fields/PTL_URL_Nitro__c.field-meta.xml
<CustomField>
    <fullName>PTL_URL_Nitro__c</fullName>
    <label>PTL URL (Nitro)</label>
    <type>Url</type>
</CustomField>