Custom--app/main/default/objects/Rehab__c/fields/QC_Pass_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_Pass_Date__c</fullName>
    <label>Field Sign-Off Date</label>
    <type>Date</type>
</CustomField>