Custom--app/main/default/objects/Rehab__c/fields/QC_yn__c.field-meta.xml
<CustomField>
    <fullName>QC_yn__c</fullName>
    <description>Checked Box in the case QC Audit was performed.</description>
    <formula>if(Total_QCs__c=0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked Box in the case QC Audit was performed.</inlineHelpText>
    <label>QC_yn</label>
    <type>Checkbox</type>
</CustomField>