Custom--app/main/default/objects/Rehab__c/fields/Re_Key_Ready__c.field-meta.xml
<CustomField>
    <fullName>Re_Key_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Key Ready</label>
    <type>Checkbox</type>
</CustomField>