Custom--app/main/default/objects/Rehab__c/fields/Re_Key_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Key_Ready_Date__c</fullName>
    <label>Re-Key Ready Date</label>
    <type>Date</type>
</CustomField>