Custom--app/main/default/objects/Rehab__c/fields/Red_Yellow_Green__c.field-meta.xml
<CustomField>
    <fullName>Red_Yellow_Green__c</fullName>
    <formula>IF (GC_Completion_Date_Est__c &lt; today() &amp;&amp; ISBLANK(Office_Signoff_Date__c) = true, "Red",
 IF (GC_Completion_Date_Est__c >= today() &amp;&amp;GC_Completion_Date_Est__c &lt;= today() + 5 &amp;&amp; ISBLANK(Office_Signoff_Date__c), "Yellow",
IF (GC_Completion_Date_Est__c > today() +5 &amp;&amp;GC_Completion_Date_Est__c&lt;= today() + 14 &amp;&amp; ISBLANK(Office_Signoff_Date__c), "Green", NULL)))</formula>
    <label>Red/Yellow/Green</label>
    <type>Text</type>
</CustomField>