Custom--app/main/default/objects/Rehab__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Portfolio__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market2</label>
    <type>Text</type>
</CustomField>