Custom--app/main/default/objects/Rehab__c/fields/Rehab_Aging_from_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Aging_from_Start_Date__c</fullName>
    <formula>IF(OR(
BEGINS(TEXT(Stage__c), 'Closed') ,
BEGINS(TEXT(Stage__c), 'HOLD') ,
BEGINS(TEXT(Stage__c), 'Complete') 
),

IF(Office_Signoff_Date__c - Start_Date__c &lt;= 15, '1-15 Days (1-2 Weeks)',
IF(Office_Signoff_Date__c - Start_Date__c &lt;= 30, '16-30 Days (3-4 Weeks)', 
IF(Office_Signoff_Date__c - Start_Date__c &lt;= 45, '31-45 Days (5-6 Weeks)',
IF(Office_Signoff_Date__c - Start_Date__c &lt;= 60, '46-60 Days (7-8 Weeks)', 
IF(Office_Signoff_Date__c - Start_Date__c &lt;= 75, '61-75 Days (9-10 Weeks)', 
IF(Office_Signoff_Date__c - Start_Date__c >= 76, '76+ Days (11-12+ Weeks)',
NULL)))))) 
,
IF(TODAY() - Start_Date__c &lt;= 15, '1-15 Days (1-2 Weeks)', 
IF(TODAY() - Start_Date__c &lt;= 30, '16-30 Days (3-4 Weeks)', 
IF(TODAY() - Start_Date__c &lt;= 45, '31-45 Days (5-6 Weeks)', 
IF(TODAY() - Start_Date__c &lt;= 60, '46-60 Days (7-8 Weeks)', 
IF(TODAY() - Start_Date__c &lt;= 75, '61-75 Days (9-10 Weeks)', 
IF(TODAY() - Start_Date__c >= 76, '76+ Days (11-12+ Weeks)', 
NULL))))))
)</formula>
    <label>Rehab Aging from Start Date</label>
    <type>Text</type>
</CustomField>