Custom--app/main/default/objects/Rehab__c/fields/Rehab_Aging_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Aging_Start_Date__c</fullName>
    <formula>IF( ISBLANK( Re_Key_Date__c ),
 Re_Key_Ready_Date__c ,
IF( RecordType.Name = 'Turn',
 Access_Date__c ,
 Re_Key_Date__c))</formula>
    <label>Rehab Aging Start Date</label>
    <type>Date</type>
</CustomField>