Custom--app/main/default/objects/Rehab__c/fields/Rehab_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Comments__c</fullName>
    <inlineHelpText>Free text field that can be used for any comments or general notes relating to this project.</inlineHelpText>
    <label>Rehab Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>