Custom--app/main/default/objects/Rehab__c/fields/Rehab_Status__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Status__c</fullName>
    <formula>CASE(Stage__c,
"Notification Received","Active - Pending Move Out",
"Ready to Schedule MOI/Utility Transfer","Active - Pending Move Out",
"Move Out Scheduled","Active - Pending Move Out",
"Move Out Assigned","Active - Pending Move Out",
"GC Awarded","Active - In Process",
"Five Day Complete","Active - In Process",
"Final Inspection Pass / QC Ready","Active - In Process",
"Final Inspection Pass","Active - In Process",
"QC Assigned","Active - In Process",
"QC Open","Active - In Process",
"QC Closed","Active - In Process",
"2 Day Walk Complete","Active - In Process",
"Closed - Completed","Completed",
"Closed - Cancelled","Completed",
"Closed - No Rehab Needed","Completed",
"Complete","Completed",
"HOLD - BK","HOLD - BK/Deed",
"HOLD - Deed","HOLD - BK/Deed",
"HOLD - Notification Revoked/Cancel Utility Transfer","HOLD - Notification Revoked",
"HOLD - Occupied/TIP","HOLD - TIP",
"HOLD - Permits","Active - Pre-Construction",
"HOLD - Sell","HOLD - Sell",
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Status</label>
    <type>Text</type>
</CustomField>