Custom--app/main/default/objects/Rehab__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal</label>
    <referenceTo>Renewal__c</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>