Custom--app/main/default/objects/Rehab__c/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <formula>TEXT( Renewal__r.Renewal_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Status</label>
    <type>Text</type>
</CustomField>