Custom--app/main/default/objects/Rehab__c/fields/Rental_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>Rental_Inspection_Required__c</fullName>
    <label>Rental Inspection Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>