Custom--app/main/default/objects/Rehab__c/fields/Rental_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Inspection_Status__c</fullName>
    <label>Rental Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rental Inspection #1 Scheduled</fullName>
            </value>
            <value>
                <fullName>Rental Inspection #2 Pending</fullName>
            </value>
            <value>
                <fullName>Rental Inspection #2 Scheduled</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>