Custom--app/main/default/objects/Rehab__c/fields/Rental_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_License_Expiration_Date__c</fullName>
    <description>See D-00013563.</description>
    <label>Rental License Expiration Date</label>
    <type>Date</type>
</CustomField>