Custom--app/main/default/objects/Rehab__c/fields/Report_Field1__c.field-meta.xml
<CustomField>
    <fullName>Report_Field1__c</fullName>
    <formula>Rehab_Est_UW__c  -  Budget_Variance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Field1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>