Custom--app/main/default/objects/Rehab__c/fields/Requested_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Move_In_Date__c</fullName>
    <label>Requested Move-In Date</label>
    <type>Date</type>
</CustomField>