Custom--app/main/default/objects/Rehab__c/fields/Resident_Decline__c.field-meta.xml
<CustomField>
    <fullName>Resident_Decline__c</fullName>
    <formula>Renewal__r.Resident_Decline__c</formula>
    <inlineHelpText>This field is editable on Renewal.</inlineHelpText>
    <label>Resident Decline</label>
    <type>Checkbox</type>
</CustomField>