Custom--app/main/default/objects/Rehab__c/fields/Resident_Email__c.field-meta.xml
<CustomField>
    <fullName>Resident_Email__c</fullName>
    <formula>Renewal__r.Lease__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resident Email</label>
    <type>Text</type>
</CustomField>