Custom--app/main/default/objects/Rehab__c/fields/Resident_Last_Name_T_Code__c.field-meta.xml
<CustomField>
    <fullName>Resident_Last_Name_T_Code__c</fullName>
    <formula>Renewal__r.Lease__r.tCode_LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resident Last Name/T-Code</label>
    <type>Text</type>
</CustomField>