Custom--app/main/default/objects/Rehab__c/fields/Resident_Name__c.field-meta.xml
<CustomField>
    <fullName>Resident_Name__c</fullName>
    <formula>Renewal__r.Lease__r.First_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resident Name</label>
    <type>Text</type>
</CustomField>