Custom--app/main/default/objects/Rehab__c/fields/Resident_Phone_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Resident_Phone_Secondary__c</fullName>
    <formula>IF(NOT (ISBLANK(Renewal__r.Lease__r.Phone_secondary__c)), Left( Renewal__r.Lease__r.Phone_secondary__c ,3) &amp;'-'&amp; MID(Renewal__r.Lease__r.Phone_secondary__c,4,3)&amp;'-' &amp; Right(Renewal__r.Lease__r.Phone_secondary__c,4), Renewal__r.Lease__r.Phone_secondary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resident Phone Secondary</label>
    <type>Text</type>
</CustomField>