Custom--app/main/default/objects/Rehab__c/fields/Resident_Responsibility_Amount__c.field-meta.xml
<CustomField>
    <fullName>Resident_Responsibility_Amount__c</fullName>
    <label>Resident Responsibility Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>