Custom--app/main/default/objects/Rehab__c/fields/Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager__c</fullName>
    <formula>Case (Region__c, 

"Atlanta","Benjamin Mervine", 
"Charlotte","Michael Robelotto", 
"Chicago","Ryan Card", 
"Inland Empire","Tom Jones", 
"Jacksonville","Saul Altamirano", 
"Las Vegas","Keith Calvert", 
"Los Angeles","Richard Brenes", 
"Miami","Alex Alfonso", 
"Minneapolis", "Travis Schultz",
"Orlando","Kent Makin", 
"Phoenix","Steve Letcher", 
"Sacramento","Daniel Ferris", 
"Seattle","Richard Berndt", 
"Tampa","Tuan Le",
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Manager</label>
    <type>Text</type>
</CustomField>