Custom--app/main/default/objects/Rehab__c/fields/RevEx_Budget__c.field-meta.xml
<CustomField>
    <fullName>RevEx_Budget__c</fullName>
    <label>RevEx Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>