Custom--app/main/default/objects/Rehab__c/fields/RevEx_Status__c.field-meta.xml
<CustomField>
    <fullName>RevEx_Status__c</fullName>
    <label>RevEx Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Candidate Identified</fullName>
            </value>
            <value>
                <fullName>Initial Budget Submitted</fullName>
            </value>
            <value>
                <fullName>IMG Approved</fullName>
            </value>
            <value>
                <fullName>IMG Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>