Custom--app/main/default/objects/Rehab__c/fields/Revised_Budget_Less_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Revised_Budget_Less_Contingency__c</fullName>
    <inlineHelpText>Manual Entry field - insert budget less contingency amount</inlineHelpText>
    <label>Revised Budget Less Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>