Custom--app/main/default/objects/Rehab__c/fields/Revised_PTL_Budget__c.field-meta.xml
<CustomField>
    <fullName>Revised_PTL_Budget__c</fullName>
    <label>Revised PTL Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>