Custom--app/main/default/objects/Rehab__c/fields/Scheduled_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Move_In_Date__c</fullName>
    <description>Data comes form  Listing -> Application Tracking   -> Scheduled Move-In Date</description>
    <label>Scheduled Move-In Date</label>
    <type>Date</type>
</CustomField>