Custom--app/main/default/objects/Rehab__c/fields/Scheduled_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Move_Out_Date__c</fullName>
    <formula>Renewal__r.Scheduled_Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Move Out Date</label>
    <type>Date</type>
</CustomField>