Custom--app/main/default/objects/Rehab__c/fields/Section_8_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Section_8_Applicant__c</fullName>
    <label>Section 8 Applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>