Custom--app/main/default/objects/Rehab__c/fields/Securitization_Date__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Date__c</fullName>
    <formula>Portfolio__r.Securitization_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Securitization Date</label>
    <type>Date</type>
</CustomField>