Custom--app/main/default/objects/Rehab__c/fields/Securitization_Pool__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Pool__c</fullName>
    <formula>TEXT(Portfolio__r.Securitization_Pool__c)</formula>
    <label>Securitization Pool</label>
    <type>Text</type>
</CustomField>