Custom--app/main/default/objects/Rehab__c/fields/Selected_Bid_Total__c.field-meta.xml
<CustomField>
    <fullName>Selected_Bid_Total__c</fullName>
    <label>Selected Bid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>