Custom--app/main/default/objects/Rehab__c/fields/Send_PTL_to_GC__c.field-meta.xml
<CustomField>
    <fullName>Send_PTL_to_GC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is updated automatically when the "Send PTL to GC" email is sent.</inlineHelpText>
    <label>Sent PTL to GC</label>
    <type>Checkbox</type>
</CustomField>