Custom--app/main/default/objects/Rehab__c/fields/Send_PTL_to_PM__c.field-meta.xml
<CustomField>
    <fullName>Send_PTL_to_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send PTL to PM</label>
    <type>Checkbox</type>
</CustomField>