Custom--app/main/default/objects/Rehab__c/fields/Send_to_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Leasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Leasing</label>
    <type>Checkbox</type>
</CustomField>