Custom--app/main/default/objects/Rehab__c/fields/Sent_to_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Leasing__c</fullName>
    <label>Sent to Leasing Date (Historical)</label>
    <type>Date</type>
</CustomField>