Custom--app/main/default/objects/Rehab__c/fields/Sent_to_TIP__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_TIP__c</fullName>
    <label>Sent to TIP Date</label>
    <type>Date</type>
</CustomField>