Custom--app/main/default/objects/Rehab__c/fields/Septic_Inspection_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Septic_Inspection_Completed_Date__c</fullName>
    <label>Septic Inspection Completed Date_zzzzzz</label>
    <type>Date</type>
</CustomField>