Custom--app/main/default/objects/Rehab__c/fields/Septic_Inspection_Completed_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Septic_Inspection_Completed_Date_Formula__c</fullName>
    <formula>Home__r.Septic_Inspection_Completed_Date__c</formula>
    <label>Septic Inspection Completed Date</label>
    <type>Date</type>
</CustomField>