Custom--app/main/default/objects/Rehab__c/fields/Sewer_Septic__c.field-meta.xml
<CustomField>
    <fullName>Sewer_Septic__c</fullName>
    <label>Sewer/Septic_zzzzzz</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Septic</fullName>
            </value>
            <value>
                <fullName>Sewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>