Custom--app/main/default/objects/Rehab__c/fields/Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Office Sign-Off</label>
    <type>Checkbox</type>
</CustomField>