Custom--app/main/default/objects/Rehab__c/fields/Signed_Off_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_Off_By__c</fullName>
    <label>Office Signed-Off By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>