Custom--app/main/default/objects/Rehab__c/fields/Signed_PTL_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Signed_PTL_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed PTL Uploaded</label>
    <type>Checkbox</type>
</CustomField>