Custom--app/main/default/objects/Rehab__c/fields/Sqft_Diff__c.field-meta.xml
<CustomField>
    <fullName>Sqft_Diff__c</fullName>
    <inlineHelpText>If the Front-End Super measures the house and has a different square footage than what was provided from acquisitions team, this field should be used to populate the difference. This will auto-populate from the Home Depot app.</inlineHelpText>
    <label>Sqft Diff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>