Custom--app/main/default/objects/Rehab__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>DO NOT MAKE ANY CHANGES TO THIS FIELD WITHOUT MAKING CORRESPONDING CHANGES TO REHAB STATUS FIELD.</description>
    <label>Rehab Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notification Received</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule MOI/Utility Transfer</fullName>
            </value>
            <value>
                <fullName>Move Out Scheduled</fullName>
            </value>
            <value>
                <fullName>Move Out Assigned</fullName>
            </value>
            <value>
                <fullName>Re-key Ready</fullName>
                <default>true</default>
                <label>Re-key Ready</label>
            </value>
            <value>
                <fullName>Move Out Complete/Needs Final Budget</fullName>
            </value>
            <value>
                <fullName>Sent to Locksmith</fullName>
            </value>
            <value>
                <fullName>Re-key Complete</fullName>
            </value>
            <value>
                <fullName>Budget/Depo Finalized/Needs Vendors</fullName>
            </value>
            <value>
                <fullName>Front-End Assigned</fullName>
            </value>
            <value>
                <fullName>Needs Final Budget</fullName>
            </value>
            <value>
                <fullName>Needs Vendors</fullName>
            </value>
            <value>
                <fullName>Needs GC</fullName>
            </value>
            <value>
                <fullName>GC Awarded</fullName>
            </value>
            <value>
                <fullName>2 Day Walk Complete</fullName>
            </value>
            <value>
                <fullName>Five Day Complete</fullName>
            </value>
            <value>
                <fullName>QC Assigned</fullName>
            </value>
            <value>
                <fullName>QC Open</fullName>
            </value>
            <value>
                <fullName>QC Closed</fullName>
            </value>
            <value>
                <fullName>Closed - Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Completed</fullName>
            </value>
            <value>
                <fullName>Closed - No Rehab Needed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>HOLD - Personal Property</fullName>
            </value>
            <value>
                <fullName>HOLD - Utilities</fullName>
            </value>
            <value>
                <fullName>HOLD - BK</fullName>
            </value>
            <value>
                <fullName>HOLD - Deed</fullName>
            </value>
            <value>
                <fullName>HOLD - Occupied/TIP</fullName>
            </value>
            <value>
                <fullName>HOLD - Other</fullName>
            </value>
            <value>
                <fullName>HOLD - Permits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>