Custom--app/main/default/objects/Rehab__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>GC Award/Start Date</label>
    <type>Date</type>
</CustomField>