Custom--app/main/default/objects/Rehab__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Status is changed to Red or Yellow automatically based on estimated completion date.</inlineHelpText>
    <label>Delete_RYG Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>