Custom--app/main/default/objects/Rehab__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IF(Red_Yellow_Green__c = "Green" ,IMAGE("/servlet/servlet.FileDownload?file=015E0000001lnMn", "Green Flag"),
IF (Red_Yellow_Green__c = "Red" ,IMAGE ("/servlet/servlet.FileDownload?file=015E0000001lnMr" , "Red Flag"),
IF (Red_Yellow_Green__c = "Yellow",  IMAGE("/servlet/servlet.FileDownload?file=015E0000001lnMs", "Yellow flag"),
IF ( ISBLANK( Office_Signoff_Date__c ) =FALSE,  IMAGE("/servlet/servlet.FileDownload?file=015E0000001lnMm", "Checkered Flag"),
  NULL))))</formula>
    <label>RYG Status Flag</label>
    <type>Text</type>
</CustomField>