Custom--app/main/default/objects/Rehab__c/fields/Submitted_PTL_Budget__c.field-meta.xml
<CustomField>
    <fullName>Submitted_PTL_Budget__c</fullName>
    <label>Submitted PTL Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>