Custom--app/main/default/objects/Rehab__c/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <description>11.20.13 CHANGED FIELD NAME This is a temporary field to house the text string that came from the dataload representing the Back-End Super assigned to this project.  We will be coordinating a project to associate this record to the appropriate record using the look-up field below.</description>
    <inlineHelpText>If applicable - this field should be populated with the Back End Team Leader</inlineHelpText>
    <label>Team Leader</label>
    <length>155</length>
    <type>Text</type>
</CustomField>