Custom--app/main/default/objects/Rehab__c/fields/TIP_Comments_for_Rehab__c.field-meta.xml
<CustomField>
    <fullName>TIP_Comments_for_Rehab__c</fullName>
    <label>TIP Comments for Rehab</label>
    <type>TextArea</type>
</CustomField>