Custom--app/main/default/objects/Rehab__c/fields/Total_Amount_of_Change_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Change_Orders__c</fullName>
    <inlineHelpText>This field calculates the total amount for all affiliated Change Orders.</inlineHelpText>
    <label>Total Amount of Change Orders</label>
    <summarizedField>Change_Orders__c.Amount__c</summarizedField>
    <summaryForeignKey>Change_Orders__c.Rehab__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>